--- a/slides/talk4_PointClustering.Rmd
+++ b/slides/talk4_PointClustering.Rmd
@@ -687,7 +687,7 @@ knitr::include_graphics("img/talk3/hierch-res.png")
 
 1. Точка $p$ является *ядерной (core)*, если ее $\epsilon$-окрестность содержит не менее $minPts$ точек. Эти точки именуются *прямо достижимыми* от $p$.
   
-2. Точка $q$ является *достижимой (reachable)* от точки $p$, если существует такая последовательность точек $p_1, ..., p_n$, $p_1 = p$, $p_n = q$ в которой каждая точка $p_{i+1}$ прямо достижима от $p_i$. Все точки, кроме $q$ должн быть ядерными.
+2. Точка $q$ является *достижимой (reachable)* от точки $p$, если существует такая последовательность точек $p_1, ..., p_n$, $p_1 = p$, $p_n = q$ в которой каждая точка $p_{i+1}$ прямо достижима от $p_i$. Все точки, кроме $q$ должны быть ядерными.
   
 3. Точка $r$ является *выброшенной (outlier)*, если оне не достижима ни от одной другой точки.
 
@@ -734,7 +734,7 @@ knitr::include_graphics("img/talk3/dbscan.svg")
 
 1. Если $q$ помечена как выброшенная, пометить $q$ номером кластера $C$
 
-1. Если $q$ имеет метку, перейти на новую итерацию.
+1. Если $q$ имеет метку, пропустить ее и перейти на новую итерацию (к следующей точке).
 
 1. Если $q$ не имеет метки, то:
 
