--- a/references.bib
+++ b/references.bib
@@ -63,3 +63,28 @@
   file = {/Users/tsamsonov/Zotero/storage/RG3FA7AM/Zhou and Jones - Shape-Aware Line Generalisation With Weighted Effe.pdf},
   langid = {english},
 }
+@Article{Schmid:2013wh,
+  title = {A Method for High-Level Street Network Extraction of {{OpenStreetMap}} Data in {{OpenScienceMap}}},
+  author = {Falko Schmid and H A Janatzek},
+  year = {2013},
+  keywords = {r02875,dsc},
+  pages = {14},
+  booktitle = {Proceedings of the 26th {{International Cartographic Conference}}, {{Dresden}}, {{Germany}}},
+  mendeley-groups = {\_DSc},
+  mendeley-tags = {r02875},
+  langid = {english},
+}
+
+@Article{krivosheina:2012,
+  title = {Joint Generalization of City Points and Road Network for Small-Scale Mapping},
+  author = {T Samsonov and A Krivosheina},
+  year = {2012},
+  keywords = {r02409,dsc},
+  pages = {1-7},
+  location = {Columbus, Ohio, USA},
+  booktitle = {Proceedings of {{Seventh International Conference}} on {{Geographic Information Science GIScience}}, {{September}} 18-21, 2012},
+  publisher = {{Columbus, Ohio}},
+  mendeley-groups = {\_DSc},
+  mendeley-tags = {r02409},
+  langid = {english},
+}
