--- a/index.Rmd
+++ b/index.Rmd
@@ -7,12 +7,16 @@ site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
 bibliography: [references.bib]
-biblio-style: apalike
+biblio-style: ieee
 link-citations: yes
 colorlinks: true
 github-repo: tsamsonov/gen-course
 description: "Курс лекций по генерализации пространственных данных"
 mainfont: Open Sans
+header-includes:
+   - \usepackage[T2A]{fontenc}
+   - \usepackage[utf8]{inputenc}
+   - \usepackage[russian]{babel}
 toc_float:
   collapse: section
   smooth_scroll: true
