--- a/04-Lines.Rmd
+++ b/04-Lines.Rmd
@@ -231,7 +231,7 @@ knitr::include_graphics("img/visvalingam.png")
 
 1. Итерировать выбор объектов в слое диаграммы Вороного (*Input Thiessen Polygons*).
 
-2. Выбрать с помощью полигона 1 его соседей, используя правило BOUNDARY\_TOUCHES (**Select By Location**). *Вам понадобится применить операцию дважды, чтобы исключить сам исходный полигон 5а из выборки*.
+2. Выбрать с помощью полигона 1 его соседей, используя правило BOUNDARY\_TOUCHES (**Select By Location**).
 
 3. Выбрать точки соседей с помощью полигонов 2, используя правило INTERSECT (**Select By Location**).
 
