explain exercise names

--- a/03-Points.Rmd
+++ b/03-Points.Rmd
@@ -11,7 +11,7 @@ knitr::include_url('https://tsamsonov.github.io/gen-course/slides/talk3_PointSel
 
 > Презентацию можно открыть в отдельном окне или вкладке браузере. Для этого щелкните по ней правой кнопкой мыши и выберите соответствующую команду.
 
-### Самостоятельная работа №1 {#points-sel-work}
+### Самостоятельная работа №1. Отбор точечных объектов  {#points-sel-work}
 
 __Цель задания__ — освоение методики автоматизированного отбора точечных объектов на примере населенных пунктов.
 
@@ -151,7 +151,7 @@ knitr::include_url('https://tsamsonov.github.io/gen-course/slides/talk5_PointAgg
 
 > Презентацию можно открыть в отдельном окне или вкладке браузере. Для этого щелкните по ней правой кнопкой мыши и выберите соответствующую команду.
 
-### Самостоятельная работа №2 {#points-clust-work}
+### Самостоятельная работа №2. Кластеризация системы расселения {#points-clust-work}
 
 __Цель задания__ — освоение методов кластеризации и регионизации точек, а также построения центроидов. В качестве метода кластеризации предлагается использовать _DBSCAN_. В качестве метода построения региона — _альфа-оболочку_.
 
