--- a/04-Lines.Rmd
+++ b/04-Lines.Rmd
@@ -11,7 +11,7 @@
 
 <!-- > Презентацию можно открыть в отдельном окне или вкладке браузере. Для этого щелкните по ней правой кнопкой мыши и выберите соответствующую команду. -->
 
-### Самостоятельная работа №3 (Автоматизация геометрического упрощения линий) {#lines-simpl-work}
+### Самостоятельная работа №3. Геометрическое упрощение линий {#lines-simpl-work}
 
 **Цель задания** --- освоение методики геометрического упрощения линий.
 
@@ -179,7 +179,7 @@ knitr::include_graphics("img/visvalingam.png")
 
 ## Отбор {#lines-select}
 
-### Самостоятельная работа №4 (Автоматизация отбора элементов транспортных сетей) {#lines-network-work}
+### Самостоятельная работа №4. Отбор элементов транспортной сети {#lines-network-work}
 
 #### Введение
 
