--- a/05-Polygons.Rmd
+++ b/05-Polygons.Rmd
@@ -2,7 +2,7 @@
 
 ## Скелетизация (построение срединной оси) {#polygons-skeleton}
 
-### Самостоятельная работа №5 (скелетизация площадных объектов гидрографии) {#polygons-skeleton-work}
+### Самостоятельная работа №5. Скелетизация площадных объектов гидрографии {#polygons-skeleton-work}
 
 **Цель задания** --- освоение методики скелетизации площадных пространственных объектов на примере построения срединной оси водоема.
 
