add initiate dem lecture slides

--- a/slides/talk7_PolygonGeneralization.Rmd
+++ b/slides/talk7_PolygonGeneralization.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Геометрическое упрощение линий"
+title: "Генерализация полигональных объектов"
 subtitle: "Картографические базы данных. Лекция №6"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
@@ -17,3 +17,21 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+## Построение центроидов
+
+---
+
+## Скелетизация
+
+---
+
+## Геометрическое упрощение
+
+---
+
+## Агрегирование
+
+---
+
+## Пропорциональное разделение
