add source data download

--- a/Ex06-ReliefGeneralization.Rmd
+++ b/Ex06-ReliefGeneralization.Rmd
@@ -32,5 +32,32 @@ __Указания к выполнению:__
     - Внутри цикла — вызов функции [фокальной статистики](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) с типом фильтра _MEAN_, размером окна, равным ___Filter size___ по обеим осям и именем выходного набора данных таким же, как и входным (`FocalStatistics`).
     - Копирование полученного растра в выходной набор данных (__Output Raster DEM__).
 
-## Сравнение  {#ex-dem-iter}
+## Сравнение структурной генерализации и глобальной фильтрации ЦМР {#ex-dem-iter}
 
+В данной части задания необходимо выполнить генерализацию фрагмента глобальной ЦМР двумя методами: структурная генерализация и глобальная фильтрация.
+
+__Исходные данные и инструменты:__
+
+1. Закачайте набор инструментов [DEM Generalization](https://github.com/tsamsonov/generalize-dem) и разархивируйте его:
+    
+    ```{r demgen, out.width = "100%", fig.cap="Инструмент генерализации ЦМР DEM Generalization"}
+    knitr::include_graphics("img/generalize-dem.png")
+    ```
+
+1. Закачайте фрагмент ЦМР _GEBCO 2019_ размером $10^\circ \times 10^\circ$, используя [веб-интерфейс](https://download.gebco.net/). Для этого включите показ градусной сетки (_Show graticule_), выберите формат _GeoTIFF_ и, используя CTRL + клик, обведите квадрат со сторонами, примерно совпадающими с линиями сетки, кратными 5 градусам:
+    
+    ```{r gebco-download, out.width = "100%", fig.cap="Загрузка цифровой модели рельефа GEBCO 2019"}
+    knitr::include_graphics("img/download-gebco.png")
+    ```
+    
+    На выбор предлагаются фрагменты с центрами в следующих точках:
+    - Красное море ($40; 15$);
+    - Альпы ($10; 45$);
+    - Норвегия ($10; 60$);
+    - Южный Каспий ($50; 40$);
+    - Центральные Анды ($-70; -15$);
+    - Северные Анды ($-75; 5$);
+    - Аляска ($-150; 60$);
+    - Камчатка ($160; 55$);
+    - Австралия ($150; -35$);
+    - Калифорния ($-120; 35$)
