finalize generalize dem Exercise

--- a/Ex06-ReliefGeneralization.Rmd
+++ b/Ex06-ReliefGeneralization.Rmd
@@ -23,14 +23,15 @@ __Параметры инструмента:__
 __Указания к выполнению:__
 
 1. Скачайте [шаблон](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/a-template-for-python-toolboxes.htm) инструмента Python Toolbox.
-1. Модифицируйте шаблон, определив в нем необходимые [параметры](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameters-in-a-python-toolbox.htm) и их [типы](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameter-data-types-in-a-python-toolbox.htm).
+1. Переименуйте шаблон в `DEM Generalization.pyt`.
+1. Модифицируйте шаблон, дав основному инструменту название `Iterate Focal Statistics` и определив в нем необходимые [параметры](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameters-in-a-python-toolbox.htm) и их [типы](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameter-data-types-in-a-python-toolbox.htm).
 1. Выполните редактирование функции `execute()`, включив в нее следующие шаги:
 
     - [Чтение параметров](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/accessing-parameters-within-a-python-toolbox.htm) инструмента в теле функции (`.valueAsText`).
     - [Копирование](http://desktop.arcgis.com/ru/arcmap/10.3/tools/data-management-toolbox/copy.htm) исходного растра в оперативную память (`Copy_management()`) c путем `in_memory/<raster_name>`.
     - Организация цикла от $0$ до $N-1$, где $N$ — количество итераций (`for i in range(N):`).
     - Внутри цикла — вызов функции [фокальной статистики](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) с типом фильтра _MEAN_, размером окна, равным ___Filter size___ по обеим осям и именем выходного набора данных таким же, как и входным (`FocalStatistics`).
-    - Копирование полученного растра в выходной набор данных (__Output Raster DEM__).
+    - Копирование полученного растра в выходной набор данных __Output Raster DEM__ (`Copy_management()`).
 
 ## Сравнение структурной генерализации и глобальной фильтрации ЦМР {#ex-dem-iter}
 
@@ -61,3 +62,96 @@ __Исходные данные и инструменты:__
     - Камчатка ($160; 55$);
     - Австралия ($150; -35$);
     - Калифорния ($-120; 35$)
+    
+1. Закачайте [данные](https://www.naturalearthdata.com/downloads/10m-physical-vectors/) Natural Earth масштаба 1:10 000 000 для следующих слоев:
+    - береговая линия (_Coastline_);
+    - океан (_Ocean_);
+    - гидрография площадная (_Rivers + lake centerlines_);
+    - гидрография линейная (_Lakes + Reservoirs_)
+    
+__Указания к выполнению:__
+
+1. Получите охват скачанного растра в качестве полигона (__Raster Domain__).
+
+1. Обрежьте полученным полигоном данные Natural Earth (__Clip__).
+
+1. Перепроецируйте все исходные данные (ЦМР + три векторных слоя) в цилиндрическую равнопромежуточную проекцию _World_Plate_Carree_. 
+
+    > Если операция выполнена верно, то проецированная версия ЦМР должна в точности совпадать с исходной как по размерам, так и по значениям. Отличие будет заключаться только в координатах ячеек, которые от градусов перейдут в метрические.
+
+1. Выполните генерализацию ЦМР с использованием инструмента __Generalize DEM__, указав слой _ocean_ в качестве параметра _Matine area polygon feature layer_. Для начала выполните генерализацию со стандартными параметрами, после этого усильте генерализационный эффект в блоке _Main parameters_ таким образом чтобы результирующая ЦМР по детализации соответствовала масштабу 1:10 000 000. 
+
+1. Выполните генерализацию ЦМР с использованием созданного вами инструмента __Iterate Focal Statistics__. Используйте размер окна, равный 5 ячейкам и подберите количество итераций такое, при котором детализация сглаженной ЦМР будет равна результату, полученному методом структурной генерализации.
+
+1. Создайте таблицу описательных статистик исходной и генерализованных ЦМР, включающую следующие столбцы:
+
+    - минимум;
+    - максимум;
+    - среднее;
+    - стандартное отклонение;
+
+1. Постройте по ЦМР горизонтали на следующих уровнях (можно взять то подмножество, которое релевантно для вашей области):
+
+    - -12000
+    - -10000
+    - -8000
+    - -6000
+    - -5000
+    - -4500
+    - -4000
+    - -3500
+    - -3000
+    - -2500
+    - -2000
+    - -1500
+    - -1000
+    - -500
+    - -200
+    - -100
+    - -50
+    - 0
+    - 50
+    - 100
+    - 150
+    - 200
+    - 300
+    - 500
+    - 750
+    - 1000
+    - 1250
+    - 1500
+    - 1750
+    - 2000
+    - 2500
+    - 3000
+    - 3500
+    - 4000
+    - 4500
+    - 5000
+    - 6000
+    - 7000
+    - 8000
+    - 9000
+
+1. Отобразите три цифровые модели рельефа в единой гипсометрической шкале с вышеуказанными ступенями. Спроектируйте цветовую шкалу, на которой будут хорошо различимы указанные ступени.
+
+1. Добавьте объекты береговой линии, линейной и площадной гидрографии. В  проекте одновремененно должны отображаться следующие слои: цифровая модель рельефа, горизонтали, береговая линия, гидрография линейная, гидрография площадная.
+
+1. Экспортируйте три изображения в масштабе 1:10 000 000:
+
+    - Исходная ЦМР
+    - Структурная генерализация
+    - Генерализация методом глобальной фильтрации
+    
+1. Напишите отчет о проделанной работе, который включает следующие пункты:
+
+    - Цель и задачи
+    - Источники данных
+    - Описание этапов работы (детальный ход выполнения)
+    - Анализ результатов
+
+В разделе анализа результатов необходимо сравнить качество полученных ЦМР с точки зрения географического правдоподобия и точности отображения рельефа. Анализ должен опираться как на визуальное сравнение изображений, так и на рассчитанные для каждой ЦМР описательные статистики.
+
+
+
+
