--- a/Ex06-ReliefGeneralization.Rmd
+++ b/Ex06-ReliefGeneralization.Rmd
@@ -6,12 +6,12 @@
 
 ## Автоматизация итерационного сглаживания ЦМР {#ex-dem-iter}
 
-В данной части задания необходимо создать инструмент Python Toolbox, который выполняет последовательное сглаживание цифровой модели рельефа фильтром среднего в несколько проходов с использованием заданных параметров.
+В данной части задания необходимо создать набор инструментов _Python Toolbox_, содержащий один инструмент __Iterate Focal Statistics__, который выполняет последовательное сглаживание цифровой модели рельефа фильтром среднего в несколько проходов с использованием заданных параметров.
 
 __Предварительное чтение:__
 
 1. Синтаксис вызова инструмента [Focal Statistics](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) средствами языка программирования Python.
-1. Создание нового набора инструментов [Python Toolbox](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/creating-a-new-python-toolbox.htm)
+1. Создание нового набора инструментов [Python Toolbox](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/creating-a-new-python-toolbox.htm).
 
 __Параметры инструмента:__
 
@@ -33,11 +33,7 @@ __Указания к выполнению:__
     - Внутри цикла — вызов функции [фокальной статистики](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) с типом фильтра _MEAN_, размером окна, равным ___Filter size___ по обеим осям и именем выходного набора данных таким же, как и входным (`FocalStatistics`).
     - Копирование полученного растра в выходной набор данных __Output Raster DEM__ (`Copy_management()`).
 
-## Сравнение структурной генерализации и глобальной фильтрации ЦМР {#ex-dem-iter}
-
-В данной части задания необходимо выполнить генерализацию фрагмента глобальной ЦМР двумя методами: структурная генерализация и глобальная фильтрация.
-
-__Исходные данные и инструменты:__
+## Подготовка исходных данных {#ex-dem-data}
 
 1. Закачайте набор инструментов [DEM Generalization](https://github.com/tsamsonov/generalize-dem) и разархивируйте его:
     
@@ -68,8 +64,6 @@ __Исходные данные и инструменты:__
     - океан (_Ocean_);
     - гидрография площадная (_Rivers + lake centerlines_);
     - гидрография линейная (_Lakes + Reservoirs_)
-    
-__Указания к выполнению:__
 
 1. Получите охват скачанного растра в качестве полигона (__Raster Domain__).
 
@@ -78,8 +72,12 @@ __Указания к выполнению:__
 1. Перепроецируйте все исходные данные (ЦМР + три векторных слоя) в цилиндрическую равнопромежуточную проекцию _World_Plate_Carree_. 
 
     > Если операция выполнена верно, то проецированная версия ЦМР должна в точности совпадать с исходной как по размерам, так и по значениям. Отличие будет заключаться только в координатах ячеек, которые от градусов перейдут в метрические.
+    
+## Сравнение структурной генерализации и глобальной фильтрации ЦМР {#ex-dem-iter}
 
-1. Выполните генерализацию ЦМР с использованием инструмента __Generalize DEM__, указав слой _ocean_ в качестве параметра _Matine area polygon feature layer_. Для начала выполните генерализацию со стандартными параметрами, после этого усильте генерализационный эффект в блоке _Main parameters_ таким образом чтобы результирующая ЦМР по детализации соответствовала масштабу 1:10 000 000. 
+В данной части задания необходимо выполнить генерализацию фрагмента глобальной ЦМР двумя методами: структурная генерализация и глобальная фильтрация.
+
+1. Выполните генерализацию ЦМР с использованием инструмента __Generalize DEM__, указав слой _ocean_ в качестве параметра _Marine area polygon feature layer_. Для начала выполните генерализацию со стандартными параметрами, после этого усильте генерализационный эффект в блоке _Main parameters_ таким образом чтобы результирующая ЦМР по детализации соответствовала масштабу 1:10 000 000. 
 
 1. Выполните генерализацию ЦМР с использованием созданного вами инструмента __Iterate Focal Statistics__. Используйте размер окна, равный 5 ячейкам и подберите количество итераций такое, при котором детализация сглаженной ЦМР будет равна результату, полученному методом структурной генерализации.
 
