add tasks of the exercise

--- a/Ex06-ReliefGeneralization.Rmd
+++ b/Ex06-ReliefGeneralization.Rmd
@@ -2,7 +2,9 @@
 
 **Цель задания** --- овладение различными техниками генерализации ЦМР.
 
-В настоящем задании необходимо сравнить два метода мелкомасштабной генерализации ЦМР: глобальная фильтрация и структурная генерализация.
+В настоящем задании необходимо сравнить два метода мелкомасштабной генерализации ЦМР: глобальная фильтрация и структурная генерализация. 
+
+__Задачи__ работы включают разработку программного инструмента итерационного сглаживания ЦМР, подготовку исходных данных, выполнение генерализации ЦМР методами структурной генерализации и глобальной фильтрации, а также сравнительный анализ полученных результатов
 
 ## Автоматизация итерационного сглаживания ЦМР {#ex-dem-iter}
 
@@ -15,23 +17,26 @@ __Предварительное чтение:__
 
 __Параметры инструмента:__
 
-1. Входная ЦМР (__Input Raster DEM__).
-1. Размер плавающего окна (__Filter size__).
-1. Количество итераций (__Number of iterations__).
-1. Выходная ЦМР (__Output Raster DEM__).
+1. Входная ЦМР (_Input Raster DEM_).
+1. Размер плавающего окна (_Filter size_).
+1. Количество итераций (_Number of iterations_).
+1. Выходная ЦМР (_Output Raster DEM_).
 
 __Указания к выполнению:__
 
 1. Скачайте [шаблон](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/a-template-for-python-toolboxes.htm) инструмента Python Toolbox.
 1. Переименуйте шаблон в `Ex6.pyt`.
 1. Модифицируйте шаблон, дав основному инструменту название `Iterate Focal Statistics` и определив в нем необходимые [параметры](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameters-in-a-python-toolbox.htm) и их [типы](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/defining-parameter-data-types-in-a-python-toolbox.htm).
-1. Выполните редактирование функции `execute()`, включив в нее следующие шаги:
+1. Добавьте строку импорта функций модуля __Spatial Analyst__: `from arcpy.sa import *`.
+1. Выполните редактирование функции `execute()`, включив в нее следующие шаги (_вместо многоточия подставьте нужные параметры_):
 
-    - [Чтение параметров](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/accessing-parameters-within-a-python-toolbox.htm) инструмента в теле функции (`.valueAsText`).
-    - [Копирование](http://desktop.arcgis.com/ru/arcmap/10.3/tools/data-management-toolbox/copy.htm) исходного растра в оперативную память (`Copy_management()`) c путем `in_memory/<raster_name>`.
-    - Организация цикла от $0$ до $N-1$, где $N$ — количество итераций (`for i in range(N):`).
-    - Внутри цикла — вызов функции [фокальной статистики](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) с типом фильтра _MEAN_, размером окна, равным ___Filter size___ по обеим осям и именем выходного набора данных таким же, как и входным (`FocalStatistics`).
-    - Копирование полученного растра в выходной набор данных __Output Raster DEM__ (`Copy_management()`).
+    - [Чтение параметров](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/creating-tools/accessing-parameters-within-a-python-toolbox.htm) инструмента в теле функции. Например: `in_raster = parameters[0].valueAsText`.
+    - Создание объекта типа [Raster](https://desktop.arcgis.com/ru/arcmap/latest/extensions/spatial-analyst/map-algebra/working-with-raster-objects.htm) из слоя входной ЦМР: `dem = Raster(...)`.
+    - Создание [прямоугольной окрестности](http://desktop.arcgis.com/ru/arcmap/10.5/analyze/arcpy-spatial-analyst/nbrrectangle-class.htm) заданного размера: `nbr = NbrRectangle(...)`.
+    - Организация цикла от $0$ до $N-1$, где $N$ — количество итераций, переданное в качестве параметра инструмента: `for i in range(N):`. Внутри цикла:
+        - Вывод сообщения о текущем номере итерации: `arcpy.AddMessage(...)`.
+        - Вызов функции [фокальной статистики](http://desktop.arcgis.com/ru/arcmap/10.5/tools/spatial-analyst-toolbox/focal-statistics.htm) с созданной ранее окрестностью. Чтобы на каждой итерации на вход подавался результат выполнения предыдущей итерации, просто записывайте его в ту же переменную: `dem = FocalStatistics(dem, ...)`.
+    - Сохранение полученного растра в выходной набор данных _Output Raster DEM_: `dem.save(...)`.
 
 ## Подготовка исходных данных {#ex-dem-data}
 
@@ -77,7 +82,7 @@ __Указания к выполнению:__
 
 В данной части задания необходимо выполнить генерализацию фрагмента глобальной ЦМР двумя методами: структурная генерализация и глобальная фильтрация.
 
-1. Выполните генерализацию ЦМР с использованием инструмента __Generalize DEM__, указав слой _ocean_ в качестве параметра _Marine area polygon feature layer_. Для начала выполните генерализацию со стандартными параметрами, после этого усильте генерализационный эффект в блоке _Main parameters_ таким образом чтобы результирующая ЦМР по детализации соответствовала масштабу 1:10 000 000. 
+1. Выполните генерализацию ЦМР с использованием инструмента __Generalize DEM__, указав слой _ocean_ в качестве параметра _Marine area polygon feature layer_. Для начала выполните генерализацию со стандартными параметрами, после этого включите сглаживание ЦМР в блоке _Widening and Smoothing_ и усильте генерализационный эффект в блоке _Main parameters_ таким образом чтобы результирующая ЦМР по детализации соответствовала масштабу 1:10 000 000. 
 
 1. Выполните генерализацию ЦМР с использованием созданного вами инструмента __Iterate Focal Statistics__. Используйте размер окна, равный 5 ячейкам и подберите количество итераций такое, при котором детализация сглаженной ЦМР будет равна результату, полученному методом структурной генерализации.
 
@@ -145,11 +150,12 @@ __Указания к выполнению:__
 
     - Цель и задачи
     - Источники данных
-    - Описание этапов работы (детальный ход выполнения)
+    - Алгоритмы генерализации (пошаговое описание).
+    - Ход выполнения работы
     - Анализ результатов
 
 В разделе анализа результатов необходимо сравнить качество полученных ЦМР с точки зрения географического правдоподобия и точности отображения рельефа. Анализ должен опираться как на визуальное сравнение изображений, так и на рассчитанные для каждой ЦМР описательные статистики.
 
-
+---
 
 
